syntax = "proto3";

option java_package = "cm.twentysix";
option java_outer_classname = "BrandProto";

service BrandService {
  rpc GetBrandInfos (BrandInfosRequest) returns (BrandInfosResponse);
}

message BrandInfosRequest {
  repeated int64 ids = 1;
}

message BrandInfosResponse {
  repeated BrandInfo brands = 1;
}

message BrandInfo {
  int64 id = 1;
  string name = 2;
  int32 freeDeliveryInfimum = 3;
  int32 deliveryFee = 4;
}